--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "babel-plugin-emotion": "^11.0.0",
+    "firebase": "^9.0.1",
+    "firebase-admin": "^9.11.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
