--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "firebase-admin": "^9.11.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-file-uploader": "^2.4.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
